routes and links

--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,7 @@ function isValidEmailAddress(string) {
         }
       var widget = new cp.CloudPayments();
       widget.charge({
-        publicId: 'pk_68ce98868f765d3fa0f2159da1580',
-        //local: 'pk_41556ead581809e9ba495c5470ed8'
+        publicId: 'pk_41556ead581809e9ba495c5470ed8', //id из личного кабинета
         //charigah.ml: pk_68ce98868f765d3fa0f2159da1580
         //prod: pk_e9f0d2682d2e7b3efc16302d8879b
             description: 'Оплата DetskyHospis.KZ', //назначение
